# sample_workspace_with_submodules

./: .gitignore  .gitmodules  Cargo.toml  Justfile
enum-updates/base/: Cargo.toml
self-updates/base/: Cargo.toml
